# lab6.repos

./: CMakeLists.txt  README.md
lab6_1/: CMakeCache.txt  Makefile  cmake_install.cmake  lab6_1  lab6_1.cpp  lab6_1.h  lab6_1_unit_test.cpp
lab6_1_rec/: lab6_1  lab6_1_rec  lab6_1_rec.cpp  lab6_1_rec.h  lab6_1_unit_test_rec.cpp
lab6_2/: lab6_2  lab6_2.cpp  lab6_2.h  lab6_2_unit_test.cpp
lab6_2_rec/: lab6_2  lab6_2_rec  lab6_2_rec.cpp  lab6_2_rec.h  lab6_2_unit_test_rec.cpp
lab6_3/: lab6_3  lab6_3.cpp  lab6_3.h  lab6_3_unit_test.cpp
lab6_3_rec/: lab6_3  lab6_3_rec  lab6_3_rec.cpp  lab6_3_rec.h  lab6_3_unit_test_rec.cpp
lab6_4/: CMakeCache.txt  Makefile  cmake_install.cmake  lab6_4  lab6_4.cpp  lab6_4.h  lab6_4_unit_test.cpp
lab6_4_rec/: lab6_4_rec  lab6_4_rec.cpp  lab6_4_rec.h  lab6_4_unit_test_rec.cpp
